--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -20,9 +20,5 @@
     "downlevelIteration": true
   },
   "exclude": [".next", "node_modules", "public", "cypress"],
-  "include": ["./**/*", "./.eslintrc.js"],
-
-  "paths": {
-    "react/*": ["node_modules/react/*"]
-  }
+  "include": ["./**/*", "./.eslintrc.js"]
 }
