--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: dev env setup
         uses: ./.github/actions/dev-env-setup
+      - run: git submodule update --init
       - run: make db_style_tests
   pre-commit:
     needs: install-dev-tools
