--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
     "build:schema": "postgraphile -X -c postgres://localhost/cif -s cif --export-schema-graphql server/schema.graphql --export-schema-json server/schema.json --classic-ids --sort-export && echo >> server/schema.json",
     "build:relay": "relay-compiler --verbose",
     "pretest": "yarn run build:relay",
-    "test": "jest",
+    "test": "NODE_OPTIONS=\"--unhandled-rejections=strict\" jest",
     "test:e2e": "wait-on --timeout 60000 http://localhost:3004 && cypress run",
     "audit-deps": "improved-yarn-audit",
     "start": "NODE_ENV=production node --unhandled-rejections=strict dist/server/index.js",
