--- a/app/.env.example
+++ b/app/.env.example
@@ -5,3 +5,5 @@ HOST=<host address>
 ENABLE_DB_MOCKS=<true or false>
 ENABLE_DB_MOCKS_COOKIES_ONLY=<true or false>
 SITEWIDE_NOTICE= # an html notice to print at the top of the page, e.g. to identify dev/test versions of the app
+STORAGE_API_HOST= # http://localhost:8000 or uri:port pointing to storage api
+STORAGE_API_KEY= # _doNotUseThisApiKeyInProduction_ api key allowing access to storage api, needs to match what's in storage api env
