--- a/app/package.json
+++ b/app/package.json
@@ -76,7 +76,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.6.1",
-    "graphql-upload": "^12.0.0",
+    "graphql-upload": "^10.0.0",
     "helmet": "^4.6.0",
     "json-schema": "^0.4.0",
     "lightship": "^6.7.2",
@@ -89,10 +89,12 @@
     "postgraphile": "^4.12.4",
     "postgraphile-log-consola": "^1.0.1",
     "postgraphile-plugin-connection-filter": "^2.2.2",
+    "postgraphile-plugin-upload-field": "^1.0.0-alpha.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-relay": "^12.0.0",
+    "react-relay-network-modern": "^6.2.0",
     "react-typography": "^0.16.20",
     "relay-compiler": "^12.0.0",
     "relay-compiler-language-typescript": "^14.2.1",
