chore: add operator table

--- a/app/postgraphile.tags.json5
+++ b/app/postgraphile.tags.json5
@@ -21,6 +21,11 @@
           omit: ["create", "update", "delete"],
         },
       },
+      "cif.operator": {
+        tags: {
+          omit: ["create", "update", "delete"],
+        },
+      },
     },
   },
 }
