--- a/chart/cas-cif/values-dev.yaml
+++ b/chart/cas-cif/values-dev.yaml
@@ -19,7 +19,16 @@ cas-postgres:
     bucketSuffix: cif-backups
 
 db:
-  preInitCommand: "make drop_db;"
+  preInitCommand: |
+    psql<<EOF
+      select pg_terminate_backend(pid) from pg_stat_activity where
+      -- don't kill my own connection!
+      pid <> pg_backend_pid()
+      -- don't kill the connections to other databases
+      and datname = '$(CIF_DATABASE)';
+      drop database if exists $(CIF_DATABASE);
+      drop user if exists $(CIF_USER);
+    EOF
 
 cert-issue:
   airflowEndpoint: https://cas-airflow-dev.apps.silver.devops.gov.bc.ca
