--- a/app/package.json
+++ b/app/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-relay": "^1.8.2",
     "improved-yarn-audit": "^3.0.0",
     "jest": "^27.3.1",
+    "jest-extended": "^1.2.0",
     "jest-mock-random": "^1.1.1",
     "nodemon": "^2.0.13",
     "prettier": "^2.4.1",
