--- a/app/package.json
+++ b/app/package.json
@@ -26,7 +26,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.2",
+    "@types/jest": "^27.0.3",
     "@types/react-relay": "^11.0.2",
     "@types/relay-runtime": "^12.0.0",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
@@ -45,8 +45,9 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-relay": "^1.8.2",
     "improved-yarn-audit": "^3.0.0",
-    "jest": "^27.3.1",
+    "jest": "^27.4.5",
     "jest-extended": "^1.2.0",
+    "jest-mock": "^27.4.2",
     "jest-mock-random": "^1.1.1",
     "nodemon": "^2.0.13",
     "prettier": "^2.4.1",
