--- a/app/package.json
+++ b/app/package.json
@@ -31,10 +31,12 @@
     "@types/relay-runtime": "^12.0.0",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
+    "axe-core": "^4.3.5",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-relay": "^12.0.0",
     "babel-plugin-styled-components": "^1.13.3",
     "cypress": "^8.7.0",
+    "cypress-axe": "^0.13.0",
     "easygraphql-tester": "^6.0.1",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-typescript": "^14.0.1",
