--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,7 @@
     "build:relay": "relay-compiler --verbose",
     "pretest": "yarn run build:relay",
     "test": "NODE_OPTIONS=\"--unhandled-rejections=strict\" jest",
-    "test:e2e": "wait-on --timeout 60000 http://localhost:3004 && cypress run",
+    "test:e2e": "wait-on --timeout 60000 http://localhost:3004 && happo-e2e -- yarn cypress run",
     "audit-deps": "improved-yarn-audit",
     "start": "NODE_ENV=production node --unhandled-rejections=strict dist/server/index.js",
     "cypress": "cypress open"
@@ -46,6 +46,9 @@
     "eslint-plugin-jest": "^25.2.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-relay": "^1.8.2",
+    "happo-cypress": "^3.0.0",
+    "happo-e2e": "^1.0.0",
+    "happo.io": "^6.8.0",
     "improved-yarn-audit": "^3.0.0",
     "jest": "^27.4.5",
     "jest-extended": "^1.2.0",
