--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "@types/jest": "^27.0.3",
     "@types/react-relay": "^11.0.2",
     "@types/relay-runtime": "^12.0.0",
+    "@types/relay-test-utils": "^6.0.5",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "axe-core": "^4.3.5",
