--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,11 +24,11 @@ repos:
         exclude: current_version\.txt
       - id: trailing-whitespace
         exclude: .*/__snapshots__/.*
-  - repo: https://github.com/Yelp/detect-secrets
-    rev: v1.1.0
+  - repo: https://github.com/zricethezav/gitleaks
+    rev: v8.2.5
     hooks:
-      - id: detect-secrets
-        args: ["--baseline", ".secrets.baseline"]
+      - id: gitleaks
+        exclude: (.*/tests/.*|app/server/schema.*)
   - repo: https://github.com/jorisroovers/gitlint
     rev: v0.17.0
     hooks:
