--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "@babel/core": "^7.15.8",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
