chore: run prettier on all files

--- a/COMPLIANCE.yaml
+++ b/COMPLIANCE.yaml
@@ -5,7 +5,7 @@ description: |
 spec:
   - name: PIA
     status: in-progress
-    last-updated: '2021-09-03T18:25:25.166Z'
+    last-updated: "2021-09-03T18:25:25.166Z"
   - name: STRA
     status: in-progress
-    last-updated: '2021-09-03T18:25:25.166Z'
+    last-updated: "2021-09-03T18:25:25.166Z"
