--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
-  "eslint.workingDirectories": [
-    "app"
-  ],
+  "eslint.workingDirectories": ["app"],
   "sqltools.connections": [
     {
       "previewLimit": 50,
