--- a/storage/docker-compose.yml
+++ b/storage/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.3'
+version: "3.3"
 services:
   api:
     build:
@@ -18,7 +18,7 @@ services:
       MINIO_HOST_URL: "${MINIO_HOST_URL}"
       STORAGE_API_KEY: "${STORAGE_API_KEY}"
     ports:
-      - '8000:8000'
+      - "8000:8000"
   minio:
     image: minio/minio:RELEASE.2021-04-22T15-44-28Z
     volumes:
