--- a/app/package.json
+++ b/app/package.json
@@ -74,6 +74,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@graphile-contrib/pg-many-to-many": "^1.0.1",
+    "@graphile-contrib/pg-omit-archived": "^2.1.0",
     "@mui/base": "^5.0.0-alpha.59",
     "@mui/material": "^5.2.3",
     "@rjsf/core": "^3.2.0",
