--- a/app/package.json
+++ b/app/package.json
@@ -107,6 +107,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "react-number-format": "^4.9.1",
     "react-relay": "^12.0.0",
     "react-relay-network-modern": "^6.2.0",
     "react-typography": "^0.16.20",
