chore: relay 13 prefers primitive types

--- a/app/relay.config.json
+++ b/app/relay.config.json
@@ -3,9 +3,9 @@
   "language": "typescript",
   "artifactDirectory": "./__generated__",
   "customScalars": {
-    "Datetime": "String",
+    "Datetime": "string",
     "JSON": "any",
-    "BigFloat": "String",
+    "BigFloat": "string",
     "Upload": "any"
   },
   "exclude": [
