--- a/app/postgraphile.tags.json5
+++ b/app/postgraphile.tags.json5
@@ -26,6 +26,11 @@
           omit: ["create", "update", "delete"],
         },
       },
+      "cif.contact": {
+        tags: {
+          omit: ["create", "update", "delete"],
+        },
+      },
     },
   },
 }
