feat: add contacts table

--- a/app/postgraphile.tags.json5
+++ b/app/postgraphile.tags.json5
@@ -32,5 +32,17 @@
         },
       },
     },
+    procedure: {
+      "cif.contact_full_name": {
+        tags: {
+          sortable: true,
+        },
+      },
+      "cif.contact_full_phone": {
+        tags: {
+          sortable: true,
+        },
+      },
+    },
   },
 }
