--- a/app/package.json
+++ b/app/package.json
@@ -121,6 +121,7 @@
   },
   "resolutions": {
     "**/jsonpointer": "5.0.0",
-    "cypress/@cypress/request/http-signature/jsprim/json-schema": "0.4.0"
+    "cypress/@cypress/request/http-signature/jsprim/json-schema": "0.4.0",
+    "next/node-fetch": "2.6.7"
   }
 }
