--- a/app/postgraphile.tags.json5
+++ b/app/postgraphile.tags.json5
@@ -31,6 +31,11 @@
           omit: ["create", "update", "delete"],
         },
       },
+      "cif.form_change": {
+        tags: {
+          omit: ["create"],
+        },
+      },
     },
     procedure: {
       "cif.contact_full_name": {
