chore: testing owasp action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test CIF App
 
 on:
   push:
-    branches: [develop]
+    branches: [develop, chore/owasp-scan]
   pull_request:
     branches: [develop]
 
@@ -18,70 +18,70 @@ jobs:
       - run: yarn install --frozen-lockfile
         working-directory: ./app
 
-  yarn-test:
-    needs: install-dev-tools
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: dev env setup
-        uses: ./.github/actions/dev-env-setup
-      - run: yarn test
-        working-directory: ./app
-  yarn-audit:
-    needs: install-dev-tools
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: dev env setup
-        uses: ./.github/actions/dev-env-setup
-      - run: yarn audit-deps
-        working-directory: ./app
-  db-schema-is-up-to-date:
-    needs: install-dev-tools
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: dev env setup
-        uses: ./.github/actions/dev-env-setup
-      - run: make deploy_db_migrations
-      - run: yarn build:schema
-        working-directory: ./app
-      - run: git diff --exit-code || (echo 'The contents of the `schema` folder are out of sync with `app/server/schema.graphql`. Did you forget to \"yarn build:schema\"?' && false)
-  db-unit-tests:
-    needs: install-dev-tools
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: dev env setup
-        uses: ./.github/actions/dev-env-setup
-      - run: make db_unit_tests
-  db-style-tests:
-    needs: install-dev-tools
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: dev env setup
-        uses: ./.github/actions/dev-env-setup
-      - run: git submodule update --init
-      - run: make db_style_tests
-  pre-commit:
-    needs: install-dev-tools
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: dev env setup
-        uses: ./.github/actions/dev-env-setup
-      - name: set pre-commit cache directory
-        run: |
-          echo "PRE_COMMIT_HOME=$GITHUB_WORKSPACE/.pre-commit-cache" >> $GITHUB_ENV
-      - name: set PY
-        run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ./.pre-commit-cache
-          key: pre-commit-${{ env.PY }}-${{ hashFiles('.pre-commit-config.yaml') }}-v2
-      - run: pre-commit run --all-files
+  # yarn-test:
+  #   needs: install-dev-tools
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: dev env setup
+  #       uses: ./.github/actions/dev-env-setup
+  #     - run: yarn test
+  #       working-directory: ./app
+  # yarn-audit:
+  #   needs: install-dev-tools
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: dev env setup
+  #       uses: ./.github/actions/dev-env-setup
+  #     - run: yarn audit-deps
+  #       working-directory: ./app
+  # db-schema-is-up-to-date:
+  #   needs: install-dev-tools
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: dev env setup
+  #       uses: ./.github/actions/dev-env-setup
+  #     - run: make deploy_db_migrations
+  #     - run: yarn build:schema
+  #       working-directory: ./app
+  #     - run: git diff --exit-code || (echo 'The contents of the `schema` folder are out of sync with `app/server/schema.graphql`. Did you forget to \"yarn build:schema\"?' && false)
+  # db-unit-tests:
+  #   needs: install-dev-tools
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: dev env setup
+  #       uses: ./.github/actions/dev-env-setup
+  #     - run: make db_unit_tests
+  # db-style-tests:
+  #   needs: install-dev-tools
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: dev env setup
+  #       uses: ./.github/actions/dev-env-setup
+  #     - run: git submodule update --init
+  #     - run: make db_style_tests
+  # pre-commit:
+  #   needs: install-dev-tools
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: dev env setup
+  #       uses: ./.github/actions/dev-env-setup
+  #     - name: set pre-commit cache directory
+  #       run: |
+  #         echo "PRE_COMMIT_HOME=$GITHUB_WORKSPACE/.pre-commit-cache" >> $GITHUB_ENV
+  #     - name: set PY
+  #       run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
+  #     - uses: actions/cache@v2
+  #       with:
+  #         path: |
+  #           ./.pre-commit-cache
+  #         key: pre-commit-${{ env.PY }}-${{ hashFiles('.pre-commit-config.yaml') }}-v2
+  #     - run: pre-commit run --all-files
 
   docker-build:
     runs-on: ubuntu-latest
@@ -148,7 +148,39 @@ jobs:
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
-  e2e:
+  # e2e:
+  #   needs: ["docker-build", "install-dev-tools"]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: dev env setup
+  #       uses: ./.github/actions/dev-env-setup
+  #     - name: start postgres and create database
+  #       run: make start_pg && make create_db
+  #     - run: createuser -s postgres
+  #     - name: deploy migrations
+  #       run: docker run --network=host -e "PGUSER=postgres" gcr.io/ggl-cas-storage/cas-cif-schema:${{ github.sha }} sqitch deploy
+  #     - name: start app
+  #       run: docker run -d --network=host -e "PGUSER=postgres" -p 3004:3004 gcr.io/ggl-cas-storage/cas-cif-app:${{ github.sha }} "/usr/bin/env" "bash" "-c" "yarn start ENABLE_MOCK_AUTH"
+  #     - name: start minio
+  #       run: docker run -d --network=host -p 9000:9000 minio/minio:RELEASE.2021-04-22T15-44-28Z server /data
+  #     - name: start storage api
+  #       run: | # pragma: allowlist secret
+  #         docker run -d --network=host -e "STORAGE_API_KEY=_doNotUseThisApiKeyInProduction_" -e "MINIO_ACCESS_KEY=minioadmin" -e "MINIO_SECRET_KEY=minioadmin" -e "MINIO_HOST_URL=minio:9000" -p 8000:8000 gcr.io/ggl-cas-storage/cas-cif-storage:${{ github.sha }}
+  #     - name: run e2e tests
+  #       env:
+  #         CYPRESS_TEST_INTERNAL_USERNAME: ${{ secrets.TEST_INTERNAL_USERNAME }}
+  #         CYPRESS_TEST_INTERNAL_PASSWORD: ${{ secrets.TEST_INTERNAL_PASSWORD }}
+  #         CYPRESS_TEST_ADMIN_USERNAME: ${{ secrets.TEST_ADMIN_USERNAME }}
+  #         CYPRESS_TEST_ADMIN_PASSWORD: ${{ secrets.TEST_ADMIN_PASSWORD }}
+  #         CYPRESS_TEST_UNAUTHORIZED_USERNAME: ${{ secrets.TEST_UNAUTHORIZED_USERNAME }}
+  #         CYPRESS_TEST_UNAUTHORIZED_PASSWORD: ${{ secrets.TEST_UNAUTHORIZED_PASSWORD }}
+  #         HAPPO_API_KEY: ${{ secrets.HAPPO_API_KEY }}
+  #         HAPPO_API_SECRET: ${{ secrets.HAPPO_API_SECRET }}
+  #       run: yarn test:e2e
+  #       working-directory: ./app
+
+  zap-owasp:
     needs: ["docker-build", "install-dev-tools"]
     runs-on: ubuntu-latest
     steps:
@@ -167,15 +199,13 @@ jobs:
       - name: start storage api
         run: | # pragma: allowlist secret
           docker run -d --network=host -e "STORAGE_API_KEY=_doNotUseThisApiKeyInProduction_" -e "MINIO_ACCESS_KEY=minioadmin" -e "MINIO_SECRET_KEY=minioadmin" -e "MINIO_HOST_URL=minio:9000" -p 8000:8000 gcr.io/ggl-cas-storage/cas-cif-storage:${{ github.sha }}
-      - name: run e2e tests
-        env:
-          CYPRESS_TEST_INTERNAL_USERNAME: ${{ secrets.TEST_INTERNAL_USERNAME }}
-          CYPRESS_TEST_INTERNAL_PASSWORD: ${{ secrets.TEST_INTERNAL_PASSWORD }}
-          CYPRESS_TEST_ADMIN_USERNAME: ${{ secrets.TEST_ADMIN_USERNAME }}
-          CYPRESS_TEST_ADMIN_PASSWORD: ${{ secrets.TEST_ADMIN_PASSWORD }}
-          CYPRESS_TEST_UNAUTHORIZED_USERNAME: ${{ secrets.TEST_UNAUTHORIZED_USERNAME }}
-          CYPRESS_TEST_UNAUTHORIZED_PASSWORD: ${{ secrets.TEST_UNAUTHORIZED_PASSWORD }}
-          HAPPO_API_KEY: ${{ secrets.HAPPO_API_KEY }}
-          HAPPO_API_SECRET: ${{ secrets.HAPPO_API_SECRET }}
-        run: yarn test:e2e
-        working-directory: ./app
+      - name: ZAP Base Scan
+        uses: zaproxy/action-baseline@v0.6.1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: "owasp/zap2docker-stable"
+          target: "http://localhost:3004/"
+          rules_file_name: ".zap/rules.tsv"
+          cmd_options: "-a -d -T 5 -m 2"
+          issue_title: OWAP Baseline
+          fail_action: true
