--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -155,18 +155,8 @@ jobs:
   #     - uses: actions/checkout@v2
   #     - name: dev env setup
   #       uses: ./.github/actions/dev-env-setup
-  #     - name: start postgres and create database
-  #       run: make start_pg && make create_db
-  #     - run: createuser -s postgres
-  #     - name: deploy migrations
-  #       run: docker run --network=host -e "PGUSER=postgres" gcr.io/ggl-cas-storage/cas-cif-schema:${{ github.sha }} sqitch deploy
-  #     - name: start app
-  #       run: docker run -d --network=host -e "PGUSER=postgres" -p 3004:3004 gcr.io/ggl-cas-storage/cas-cif-app:${{ github.sha }} "/usr/bin/env" "bash" "-c" "yarn start ENABLE_MOCK_AUTH"
-  #     - name: start minio
-  #       run: docker run -d --network=host -p 9000:9000 minio/minio:RELEASE.2021-04-22T15-44-28Z server /data
-  #     - name: start storage api
-  #       run: | # pragma: allowlist secret
-  #         docker run -d --network=host -e "STORAGE_API_KEY=_doNotUseThisApiKeyInProduction_" -e "MINIO_ACCESS_KEY=minioadmin" -e "MINIO_SECRET_KEY=minioadmin" -e "MINIO_HOST_URL=minio:9000" -p 8000:8000 gcr.io/ggl-cas-storage/cas-cif-storage:${{ github.sha }}
+  #     - name: run app locally
+  #       uses: ./.github/actions/local-app-run
   #     - name: run e2e tests
   #       env:
   #         CYPRESS_TEST_INTERNAL_USERNAME: ${{ secrets.TEST_INTERNAL_USERNAME }}
@@ -187,18 +177,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: dev env setup
         uses: ./.github/actions/dev-env-setup
-      - name: start postgres and create database
-        run: make start_pg && make create_db
-      - run: createuser -s postgres
-      - name: deploy migrations
-        run: docker run --network=host -e "PGUSER=postgres" gcr.io/ggl-cas-storage/cas-cif-schema:${{ github.sha }} sqitch deploy
-      - name: start app
-        run: docker run -d --network=host -e "PGUSER=postgres" -p 3004:3004 gcr.io/ggl-cas-storage/cas-cif-app:${{ github.sha }} "/usr/bin/env" "bash" "-c" "yarn start ENABLE_MOCK_AUTH"
-      - name: start minio
-        run: docker run -d --network=host -p 9000:9000 minio/minio:RELEASE.2021-04-22T15-44-28Z server /data
-      - name: start storage api
-        run: | # pragma: allowlist secret
-          docker run -d --network=host -e "STORAGE_API_KEY=_doNotUseThisApiKeyInProduction_" -e "MINIO_ACCESS_KEY=minioadmin" -e "MINIO_SECRET_KEY=minioadmin" -e "MINIO_HOST_URL=minio:9000" -p 8000:8000 gcr.io/ggl-cas-storage/cas-cif-storage:${{ github.sha }}
+      - name: run app locally
+        uses: ./.github/actions/local-app-run
       - name: ZAP Base Scan
         uses: zaproxy/action-baseline@v0.6.1
         with:
