--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,70 +18,70 @@ jobs:
       - run: yarn install --frozen-lockfile
         working-directory: ./app
 
-  # yarn-test:
-  #   needs: install-dev-tools
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: dev env setup
-  #       uses: ./.github/actions/dev-env-setup
-  #     - run: yarn test
-  #       working-directory: ./app
-  # yarn-audit:
-  #   needs: install-dev-tools
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: dev env setup
-  #       uses: ./.github/actions/dev-env-setup
-  #     - run: yarn audit-deps
-  #       working-directory: ./app
-  # db-schema-is-up-to-date:
-  #   needs: install-dev-tools
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: dev env setup
-  #       uses: ./.github/actions/dev-env-setup
-  #     - run: make deploy_db_migrations
-  #     - run: yarn build:schema
-  #       working-directory: ./app
-  #     - run: git diff --exit-code || (echo 'The contents of the `schema` folder are out of sync with `app/server/schema.graphql`. Did you forget to \"yarn build:schema\"?' && false)
-  # db-unit-tests:
-  #   needs: install-dev-tools
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: dev env setup
-  #       uses: ./.github/actions/dev-env-setup
-  #     - run: make db_unit_tests
-  # db-style-tests:
-  #   needs: install-dev-tools
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: dev env setup
-  #       uses: ./.github/actions/dev-env-setup
-  #     - run: git submodule update --init
-  #     - run: make db_style_tests
-  # pre-commit:
-  #   needs: install-dev-tools
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: dev env setup
-  #       uses: ./.github/actions/dev-env-setup
-  #     - name: set pre-commit cache directory
-  #       run: |
-  #         echo "PRE_COMMIT_HOME=$GITHUB_WORKSPACE/.pre-commit-cache" >> $GITHUB_ENV
-  #     - name: set PY
-  #       run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
-  #     - uses: actions/cache@v2
-  #       with:
-  #         path: |
-  #           ./.pre-commit-cache
-  #         key: pre-commit-${{ env.PY }}-${{ hashFiles('.pre-commit-config.yaml') }}-v2
-  #     - run: pre-commit run --all-files
+  yarn-test:
+    needs: install-dev-tools
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: dev env setup
+        uses: ./.github/actions/dev-env-setup
+      - run: yarn test
+        working-directory: ./app
+  yarn-audit:
+    needs: install-dev-tools
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: dev env setup
+        uses: ./.github/actions/dev-env-setup
+      - run: yarn audit-deps
+        working-directory: ./app
+  db-schema-is-up-to-date:
+    needs: install-dev-tools
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: dev env setup
+        uses: ./.github/actions/dev-env-setup
+      - run: make deploy_db_migrations
+      - run: yarn build:schema
+        working-directory: ./app
+      - run: git diff --exit-code || (echo 'The contents of the `schema` folder are out of sync with `app/server/schema.graphql`. Did you forget to \"yarn build:schema\"?' && false)
+  db-unit-tests:
+    needs: install-dev-tools
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: dev env setup
+        uses: ./.github/actions/dev-env-setup
+      - run: make db_unit_tests
+  db-style-tests:
+    needs: install-dev-tools
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: dev env setup
+        uses: ./.github/actions/dev-env-setup
+      - run: git submodule update --init
+      - run: make db_style_tests
+  pre-commit:
+    needs: install-dev-tools
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: dev env setup
+        uses: ./.github/actions/dev-env-setup
+      - name: set pre-commit cache directory
+        run: |
+          echo "PRE_COMMIT_HOME=$GITHUB_WORKSPACE/.pre-commit-cache" >> $GITHUB_ENV
+      - name: set PY
+        run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ./.pre-commit-cache
+          key: pre-commit-${{ env.PY }}-${{ hashFiles('.pre-commit-config.yaml') }}-v2
+      - run: pre-commit run --all-files
 
   docker-build:
     runs-on: ubuntu-latest
@@ -148,27 +148,27 @@ jobs:
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
-  # e2e:
-  #   needs: ["docker-build", "install-dev-tools"]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: dev env setup
-  #       uses: ./.github/actions/dev-env-setup
-  #     - name: run app locally
-  #       uses: ./.github/actions/local-app-run
-  #     - name: run e2e tests
-  #       env:
-  #         CYPRESS_TEST_INTERNAL_USERNAME: ${{ secrets.TEST_INTERNAL_USERNAME }}
-  #         CYPRESS_TEST_INTERNAL_PASSWORD: ${{ secrets.TEST_INTERNAL_PASSWORD }}
-  #         CYPRESS_TEST_ADMIN_USERNAME: ${{ secrets.TEST_ADMIN_USERNAME }}
-  #         CYPRESS_TEST_ADMIN_PASSWORD: ${{ secrets.TEST_ADMIN_PASSWORD }}
-  #         CYPRESS_TEST_UNAUTHORIZED_USERNAME: ${{ secrets.TEST_UNAUTHORIZED_USERNAME }}
-  #         CYPRESS_TEST_UNAUTHORIZED_PASSWORD: ${{ secrets.TEST_UNAUTHORIZED_PASSWORD }}
-  #         HAPPO_API_KEY: ${{ secrets.HAPPO_API_KEY }}
-  #         HAPPO_API_SECRET: ${{ secrets.HAPPO_API_SECRET }}
-  #       run: yarn test:e2e
-  #       working-directory: ./app
+  e2e:
+    needs: ["docker-build", "install-dev-tools"]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: dev env setup
+        uses: ./.github/actions/dev-env-setup
+      - name: run app locally
+        uses: ./.github/actions/local-app-run
+      - name: run e2e tests
+        env:
+          CYPRESS_TEST_INTERNAL_USERNAME: ${{ secrets.TEST_INTERNAL_USERNAME }}
+          CYPRESS_TEST_INTERNAL_PASSWORD: ${{ secrets.TEST_INTERNAL_PASSWORD }}
+          CYPRESS_TEST_ADMIN_USERNAME: ${{ secrets.TEST_ADMIN_USERNAME }}
+          CYPRESS_TEST_ADMIN_PASSWORD: ${{ secrets.TEST_ADMIN_PASSWORD }}
+          CYPRESS_TEST_UNAUTHORIZED_USERNAME: ${{ secrets.TEST_UNAUTHORIZED_USERNAME }}
+          CYPRESS_TEST_UNAUTHORIZED_PASSWORD: ${{ secrets.TEST_UNAUTHORIZED_PASSWORD }}
+          HAPPO_API_KEY: ${{ secrets.HAPPO_API_KEY }}
+          HAPPO_API_SECRET: ${{ secrets.HAPPO_API_SECRET }}
+        run: yarn test:e2e
+        working-directory: ./app
 
   zap-owasp:
     needs: ["docker-build", "install-dev-tools"]
