chore: removing branch action run

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test CIF App
 
 on:
   push:
-    branches: [develop, chore/owasp-scan]
+    branches: [develop]
   pull_request:
     branches: [develop]
 
