--- a/chart/cas-cif/templates/secret.yaml
+++ b/chart/cas-cif/templates/secret.yaml
@@ -2,12 +2,24 @@
 {{- $dbAppPassword := (randAlphaNum 32) | b64enc | quote }}
 {{- $dbOwnerPassword := (randAlphaNum 32) | b64enc | quote }}
 {{- $secretName := print (include "cas-cif.fullname" .) }}
+{{- $dbReadonlyUser := "unfetched user" }}
+{{- $dbReadonlyPassword := "unfetched password" }}
+{{- $dbName := "unfetched db-name" }}
 
 {{- $secret := (lookup "v1" "Secret" .Release.Namespace $secretName ) }}
 {{- if $secret }}
 {{- $sessionSecret = index $secret.data "session-secret" }} {{/* # pragma: allowlist secret */}}
 {{- $dbAppPassword = index $secret.data "database-app-password" }} {{/* # pragma: allowlist secret */}}
 {{- $dbOwnerPassword = index $secret.data "database-owner-password" }} {{/* # pragma: allowlist secret */}}
+{{- end -}}
+
+{{- $ggircsSecret := (lookup "v1" "Secret" "9212c9-dev" "cas-ggircs" ) }}
+{{- if $ggircsSecret }}
+{{- $dbReadonlyUser = index $ggircsSecret.data "database-readonly-user" }} {{/* # pragma: allowlist secret */}}
+{{- $dbReadonlyPassword = index $ggircsSecret.data "database-readonly-password" }} {{/* # pragma: allowlist secret */}}
+{{- $dbName = index $ggircsSecret.data "database-name" }} {{/* # pragma: allowlist secret */}}
+{{- else }}
+{{- print "WARNING ggircsSecret does not exist, connection to the ggircs db will fail" }}
 {{- end -}}
 
 apiVersion: v1
@@ -25,3 +37,18 @@ data:
   database-owner-password: {{ $dbOwnerPassword }}
   database-app-user: {{ .Values.db.appUser | b64enc | quote }}
   database-app-password: {{ $dbAppPassword }}
+
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: cas-ggircs
+  labels: {{ include "cas-cif.labels" . | nindent 4 }}
+  annotations:
+    "helm.sh/hook": "pre-install,pre-upgrade"
+type: Opaque
+data:
+  ggircs-readonly-user: {{ $dbReadonlyUser }}
+  ggircs-readonly-password: {{ $dbReadonlyPassword }}
+  database-name: {{ $dbName }}
