chore: changes from PR review

--- a/chart/cas-cif/templates/secret.yaml
+++ b/chart/cas-cif/templates/secret.yaml
@@ -8,16 +8,16 @@
 
 {{- $secret := (lookup "v1" "Secret" .Release.Namespace $secretName ) }}
 {{- if $secret }}
-{{- $sessionSecret = index $secret.data "session-secret" }} {{/* # pragma: allowlist secret */}}
-{{- $dbAppPassword = index $secret.data "database-app-password" }} {{/* # pragma: allowlist secret */}}
-{{- $dbOwnerPassword = index $secret.data "database-owner-password" }} {{/* # pragma: allowlist secret */}}
+{{- $sessionSecret = index $secret.data "session-secret" }}
+{{- $dbAppPassword = index $secret.data "database-app-password" }}
+{{- $dbOwnerPassword = index $secret.data "database-owner-password" }}
 {{- end -}}
 
-{{- $ggircsSecret := (lookup "v1" "Secret" "9212c9-dev" "cas-ggircs" ) }}
+{{- $ggircsSecret := (lookup "v1" "Secret" .Values.ggircs.namespace .Values.ggircs.instanceName ) }}
 {{- if $ggircsSecret }}
-{{- $dbReadonlyUser = index $ggircsSecret.data "database-readonly-user" }} {{/* # pragma: allowlist secret */}}
-{{- $dbReadonlyPassword = index $ggircsSecret.data "database-readonly-password" }} {{/* # pragma: allowlist secret */}}
-{{- $dbName = index $ggircsSecret.data "database-name" }} {{/* # pragma: allowlist secret */}}
+{{- $dbReadonlyUser = index $ggircsSecret.data "database-readonly-user" }}
+{{- $dbReadonlyPassword = index $ggircsSecret.data "database-readonly-password" }}
+{{- $dbName = index $ggircsSecret.data "database-name" }}
 {{- else }}
 {{- print "WARNING ggircsSecret does not exist, connection to the ggircs db will fail" }}
 {{- end -}}
