chore: grant usage on postgres_fdw to cif user

--- a/chart/cas-cif/templates/cronJobs/db-init.yaml
+++ b/chart/cas-cif/templates/cronJobs/db-init.yaml
@@ -69,3 +69,7 @@ spec:
 {{ .Values.db.preInitCommand | indent 18 }}
                   create-user-db -d $(CIF_DATABASE) -u $(CIF_USER) -p $(CIF_PASSWORD) --owner;
                   alter-role $(CIF_USER) createrole;
+                  psql<<EOF
+                    create extension if not exists postgres_fdw;
+                    grant usage on foreign_data_wrapper postgres_fdw to $(CIF_USER);
+                  EOF
