chore: fix typo (no underscores in usage grant)

--- a/chart/cas-cif/templates/cronJobs/db-init.yaml
+++ b/chart/cas-cif/templates/cronJobs/db-init.yaml
@@ -71,5 +71,5 @@ spec:
                   alter-role $(CIF_USER) createrole;
                   psql<<EOF
                     create extension if not exists postgres_fdw;
-                    grant usage on foreign_data_wrapper postgres_fdw to $(CIF_USER);
+                    grant usage on foreign data wrapper postgres_fdw to $(CIF_USER);
                   EOF
