feat: add custom createProjectRevision mutation

--- a/app/postgraphile.tags.json5
+++ b/app/postgraphile.tags.json5
@@ -36,6 +36,11 @@
           omit: ["create"],
         },
       },
+      "cif.project_revision": {
+        tags: {
+          omit: ["create"],
+        },
+      },
     },
     procedure: {
       "cif.contact_full_name": {
