--- a/app/package.json
+++ b/app/package.json
@@ -77,6 +77,7 @@
     "@graphile-contrib/pg-omit-archived": "^2.1.0",
     "@graphile-contrib/pg-order-by-related": "^1.0.0-beta.6",
     "@mui/base": "^5.0.0-alpha.59",
+    "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.2.3",
     "@rjsf/core": "^3.2.0",
     "ajv": "^8.9.0",
