--- a/app/package.json
+++ b/app/package.json
@@ -82,6 +82,7 @@
     "@mui/material": "^5.2.3",
     "@rjsf/core": "^3.2.0",
     "@sentry/nextjs": "^6.18.2",
+    "@sentry/react": "^6.18.2",
     "ajv": "^8.9.0",
     "body-parser": "^1.19.0",
     "bowser": "^2.11.0",
