--- a/.github/actions/dev-env-setup/action.yml
+++ b/.github/actions/dev-env-setup/action.yml
@@ -17,12 +17,16 @@ runs:
         echo "PERL_MB_OPT=--install_base '/home/runner/perl5'" >> $GITHUB_ENV
         echo "PERL_MM_OPT=INSTALL_BASE=/home/runner/perl5" >> $GITHUB_ENV
         echo "/home/runner/perl5/bin" >> $GITHUB_PATH
+    - name: set postgres user
+      shell: bash
+      run: | # pragma: allowlist secret
+        PGUSER=postgres
     - uses: actions/cache@v2
       id: asdf-cache
       with:
         path: |
           ~/.asdf
-        key: ${{ runner.os }}-asdf-cache-${{ hashFiles('.tool-versions') }}-v2
+        key: ${{ runner.os }}-asdf-cache-${{ hashFiles('.tool-versions') }}
     - uses: actions/cache@v2
       id: perl-cache
       with:
