chore: apply PGUSER to entire job

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   install-dev-tools:
     runs-on: ubuntu-latest
+    env:
+      PGUSER: postgres
     steps:
       - uses: actions/checkout@v2
       - name: dev env setup
