--- a/chart/cas-cif/templates/app-deployment.yaml
+++ b/chart/cas-cif/templates/app-deployment.yaml
@@ -111,7 +111,7 @@ spec:
           - name: SENTRY_RELEASE
             value: {{ .Values.image.app.tag }}
           - name: SHOW_KC_LOGIN
-            value: {{ .Values.app.show_kc_login }}
+            value: {{ .Values.app.showKCLogin | quote }}
           - name: NAMESPACE
             valueFrom:
               fieldRef:
