--- a/app/.env.example
+++ b/app/.env.example
@@ -11,3 +11,6 @@ STORAGE_API_KEY= # _doNotUseThisApiKeyInProduction_ api key allowing access to s
 # Sentry can be setup for localhost
 SENTRY_ENVIRONMENT=localhost
 SENTRY_RELEASE=local_development
+
+# true to get the keycloak logi page (for use with username/password), false to bring you directly to idir login page
+SHOW_KC_LOGIN=true
