--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,12 +86,24 @@ jobs:
           key: pre-commit-${{ env.PY }}-${{ hashFiles('.pre-commit-config.yaml') }}-v2
       - run: pre-commit run --all-files
 
-  gitlint:
-    runs-on: ubuntu-latest
-    name: GitLint
-    steps:
-      - name: Lint commits, branches, and pull requests
-        uses: aschbacd/gitlint-action@v1.0.2
+  steps:
+    - uses: actions/checkout@v2
+      with:
+        # Check out at the last commit (pre-automated merge, we don't care about the temporary commit for linting)
+        ref: ${{ github.event.pull_request.head.sha }}
+        # Get all history
+        fetch-depth: 0
+
+    - name: Install gitlint
+      shell: bash
+      run: |
+        python -m pip install gitlint
+
+    - name: Run gitlint
+      shell: bash
+      run: |
+        # Lint everything from the base to the latest
+        gitlint --commits "${{ github.event.pull_request.base.sha }}..HEAD"
 
   docker-build:
     runs-on: ubuntu-latest
