--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,6 +86,14 @@ jobs:
           key: pre-commit-${{ env.PY }}-${{ hashFiles('.pre-commit-config.yaml') }}-v2
       - run: pre-commit run --all-files
 
+  commitlint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: wagoid/commitlint-github-action@v2
+
   docker-build:
     runs-on: ubuntu-latest
     strategy:
