--- a/chart/cas-cif/templates/cronJobs/cron-swrs-operator-import.yaml
+++ b/chart/cas-cif/templates/cronJobs/cron-swrs-operator-import.yaml
@@ -20,6 +20,7 @@ spec:
         spec:
           activeDeadlineSeconds: 600
           restartPolicy: Never
+          imagePullSecrets: {{ include "cas-cif.imagePullSecrets" . | nindent 12 }}
           containers:
             - env:
                 - name: PGDATABASE
